# vstatd

./: AUTHORS  ChangeLog  Makefile.am  configure.ac  mkrelease
src/: Makefile.am  cacct.c  cfg.c  cfg.h  cvirt.c  limit.c  loadavg.c  log.c  log.h  main.c  proc.h  vrrd.h  vstatd.conf
